interface/elements/msc-profile-view/msc-profile-view.css
:host {
  display: flex;
  flex-direction: column;
  margin: 20px;
  font-weight: lighter;
  font-family: 'Lato', sans-serif;
}

.title {
  font-size: 48px;
  margin-bottom: 20px;
  font-weight: 300 !important;
  color: #A4A4A4;
}

.section {
  margin-top: 20px;
}

.top {
  display: flex;
  flex-direction: row;
}

.name-area {
  display: flex;
  flex-direction: column;
  margin-left: 10px;
  justify-content: space-around;
  align-items: center;
}

.name {
  font-size: 40px;
  font-weight: lighter;
  display: flex;
  align-items: center;
  line-height: 1;
}

.account {
  color: var(--msc-subtle-text-color);
  font-family: 'Ubuntu' monospace;
  font-size: 28px;
}

.user-message {
  font-weight: lighter;
  text-align: justify;
  font-size: 20px;
}

.call-to-action {
  display: inline-block;
  flex-direction: column;
  padding: 10px;
  border-radius: 10px;
  font-weight: lighter;
}

.action-area {
  display: flex;
  justify-content: center;
  margin-top: 10px;
}

.settings {
  display: flex;
}

.action {
  width: 300px;
  height: 32px;
  background-color: #00b050;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: larger;
  font-weight: lighter;
  border-radius: 4px;
  cursor: pointer;
  border: 1px solid #abbab2;
  text-transform: none;
}

.follow {
  background-color: #3b3838;
}

.follow[following] {
  background-color: #00b050;
}

paper-toggle-button {
  margin: 10px;
  font-size: 1.5em;
  font-weight: lighter;
}

th {
  font-weight: inherit;
}

td {
  font-weight: lighter;
  font-size: larger;
  justify-content: center;
  text-align: center;
  padding: 5px;
}

tr {
  background-color: rgba(255, 255, 255, 0.05);
}

tr[coinbase] {
  background-color: rgba(200, 255, 200, 0.2);
}

table {
  background-color: var(--msc-background-hightlight);
}

.action {}

.action[failed] {
  background-color: #81281b;
}

.action[pending] {
  background-color: #3e4e3e;
  background-size: 64px 64px;
  background-image: linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%, transparent 75%, transparent);
  animation: animate-stripes 3s linear infinite;
}

@keyframes animate-stripes {
  0% {
    background-position: 0 0;
  }
  100% {
    background-position: 128px 0;
  }
}

.link:hover {
  text-decoration: underline;
}

.link {
  cursor: pointer;
  display: inline-block;
  font-weight: normal;
  color: #abcdef;
}

.clickable {
  cursor: pointer;
}

.flex-right {
  display: flex;
  justify-content: flex-end;
}

.flex-center {
  display: flex;
  justify-content: center;
}

.flex-between {
  display: flex;
  justify-content: space-between;
}

paper-button {
  text-transform: none;
  color: #A4A4A4;
}

paper-dialog {
  background-color: rgb(36, 36, 36);
}

table {
  border-radius: 4px;
}

.warn {
  color: red;
}

#row1 {
  position: absolute;
  left: 5%;
}

#row5 {
  position: fixed;
  right: 3%;
  font-family: 'Lato' sans-serif;
  font-weight: 900 !important;
  color: #f6d951;
  font-size: 17px;
}

#row3 {
  background: none;
  width: 130px;
  margin: 0px;
}

#tableheader {
  height: 50px;
  font-size: 12px;
  background: #2C2C2C;
  font-family: 'Lato' sans-serif;
  font-weight: 900;
  border: 2px #2C2C2C solid;
}

#newWallet {
  position: absolute;
  right: 27.5%;
  background: #fad644;
  width: 130px;
  height: 33px;
  font-family: 'Lato' sans-serif;
  font-weight: 900 !important;
  font-size: 13px;
  border-radius: 5px;
}
#backup{
  position: absolute;
  right: 2%;
  background: orange;
  width: 130px;
  height: 33px;
  font-family: 'Lato' sans-serif;
  font-weight: 900 !important;
  font-size: 13px;
  border-radius: 5px;
}
#bkp1{
  background: none;
  width: 130px;
  margin: 0px;
  color: #302d38;
}
#row4 {
  background: none;
  width: 190px;
  margin: 0px;
}

#oldWallet {
  position: absolute;
  right: 12.5%;
  background: #fff;
  width: 190px;
  height: 33px;
  font-family: 'Lato' sans-serif;
  font-weight: 900 !important;
  font-size: 13px;
  border-radius: 5px;
}

#addPeerDialog {
  font-size: 18px;
}

.hidden {
  visibility: hidden;
}

#row6 {
  position: relative;
  top: 15%;
  left: -85vw !important;
  font-family: 'Lato', sans-serif !important;
  font-weight: 900 !important;
  font-size: 15px;
  color: #fcd345;
}

.sync-status {
  font-family: 'Lato', sans-serif !important;
  font-weight: 900 !important;
}

#data1 {
  font-family: 'Lato', sans-serif !important;
  color: #393a3c;
  font-size: 11px !important;
  font-weight: 700 !important;
  height: 50px;
}

table {
  border-collapse: collapse;
  width: 100%;
}

th, td {
  text-align: center;
  padding: 8px;
}

tr:nth-child(odd){
  background-color: #f5f6fa !important;
}
tr:nth-child(even) {
  background-color: #eaebef !important;
}

